--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19",
     "react-day-picker": "9.6.7",
     "react-dom": "^19",
